[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/boombox1.png" type="Texture" id=1]
[ext_resource path="res://UI/radio_signal.png" type="Texture" id=2]
[ext_resource path="res://Radio.gd" type="Script" id=3]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Music and Sounds/HarperOnTheSill1.6.wav" type="AudioStream" id=5]
[ext_resource path="res://UI/RozanzuSpotify.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.372549, 0.894118, 0.360784, 0.686275 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 57, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 57, 0, 57, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 114, 0, 57, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 171, 0, 57, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 10
font_data = ExtResource( 4 )

[node name="Radio" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -21.0
margin_top = -14.0
margin_right = 18.0
margin_bottom = 12.0
custom_styles/panel = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -22, -16 )
scale = Vector2( 0.65, 0.65 )
frames = SubResource( 6 )
frame = 3
playing = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -18.0
margin_top = -11.0
margin_right = 15.0
margin_bottom = 9.0

[node name="MusicLabel" type="RichTextLabel" parent="."]
margin_left = -145.0
margin_top = -5.0
margin_right = 36.0
margin_bottom = 15.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]Rozanzu - Harper's Sill"
text = "Rozanzu - Harper's Sill"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0

[node name="QRCode" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -1 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 6 )

[connection signal="focus_entered" from="Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
